<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MethodSelectionFragment">

    <TextView
        android:id="@+id/tv_method_selection_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/text_method_selection_title"
        app:layout_constraintBottom_toTopOf="@id/guideline_method_selection_center_horizontal" />

    <Button
        android:id="@+id/btn_method_selection_sms_retriever_api"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/text_method_selection_sms_retriever_api"
        app:layout_constraintEnd_toStartOf="@id/guideline_method_selection_center_vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guideline_method_selection_center_horizontal" />

    <Button
        android:id="@+id/btn_method_selection_sms_user_consent_api"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/text_method_selection_sms_user_consent_api"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/guideline_method_selection_center_vertical"
        app:layout_constraintTop_toBottomOf="@id/guideline_method_selection_center_horizontal" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_method_selection_center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_method_selection_center_vertical"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />
</androidx.constraintlayout.widget.ConstraintLayout>